<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_single_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.folushooladipo.lasgiti.SingleProfileActivity"
    android:background="#f5f5f5">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fefefe"
        android:scrollbars="vertical"
        android:fadeScrollbars="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/single_profile_container"
            android:padding="10dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:id="@+id/single_profile_picture"
                android:layout_margin="5dp"
                fresco:placeholderImage="@drawable/placeholder1"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/single_profile_user_id_container">

                <TextView
                    android:id="@+id/single_profile_user_id_qualifier"
                    android:text="@string/single_profile_user_id_qualifier_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:maxWidth="100dp" />

                <TextView
                    android:id="@+id/single_profile_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/default_anonymous_user"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textIsSelectable="true" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/single_profile_github_website_profile_url_container">

                <TextView
                    android:id="@+id/single_profile_github_website_profile_url_qualifier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/single_profile_github_website_profile_url_qualifier_msg"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:maxWidth="100dp" />

                <TextView
                    android:id="@+id/single_profile_github_website_profile_url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/default_anonymous_user"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/deepBlue"
                    android:textIsSelectable="true" />
            </TableRow>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/single_profile_everything_detailed_profile_container">

                <TableRow
                    android:id="@+id/single_profile_loading_detailed_profile_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical">

                    <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/single_profile_loading_detailed_profile_progress_bar"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />

                    <TextView
                        android:text="@string/single_profile_loading_detailed_profile_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/single_profile_loading_detailed_profile"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp" />
                </TableRow>

                <TableRow
                    android:id="@+id/single_profile_load_detailed_profile_failed_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <TextView
                        android:text="@string/single_profile_load_detailed_profile_failed_qualifier_msg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/single_profile_load_detailed_profile_failed_qualifier" />

                    <Button
                        android:id="@+id/single_profile_load_detailed_profile_failed_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_marginEnd="5dp"
                        android:padding="5dp"
                        android:background="@drawable/btn_colored_background_round_edges"
                        android:drawableRight="@drawable/ic_action_refresh"
                        android:drawableEnd="@drawable/ic_action_refresh"
                        android:text="@string/default_retry_msg"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/mediumWhite" />

                </TableRow>

                <LinearLayout
                    android:id="@+id/single_profile_profile_details_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone">

                    <!-- TODO: Make the email clickable, which opens the mail client. -->
                    <TableRow
                        android:id="@+id/single_profile_email_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" >

                        <TextView
                            android:text="@string/single_profile_email_qualifier_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/single_profile_email_qualifier"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:maxWidth="100dp" />

                        <TextView
                            android:id="@+id/single_profile_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/default_not_specified"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textIsSelectable="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/single_profile_full_name_container">

                        <TextView
                            android:id="@+id/single_profile_full_name_qualifier"
                            android:text="@string/single_profile_full_name_qualifier_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:maxWidth="100dp" />

                        <TextView
                            android:id="@+id/single_profile_full_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/default_anonymous_user"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textIsSelectable="true" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/single_profile_number_of_repos_container">

                        <TextView
                            android:id="@+id/single_profile_number_of_repos_qualifier"
                            android:text="@string/single_profile_number_of_repos_qualifier_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:maxWidth="100dp" />

                        <TextView
                            android:id="@+id/single_profile_number_of_repos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/default_zero"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textIsSelectable="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/single_profile_number_of_followers_container">
                        <TextView
                            android:id="@+id/single_profile_number_of_followers_qualifier"
                            android:text="@string/single_profile_number_of_followers_qualifier_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:maxWidth="100dp" />

                        <TextView
                            android:id="@+id/single_profile_number_of_followers"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/default_zero"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large"
                            android:textIsSelectable="true" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/single_profile_is_hireable_container">

                        <TextView
                            android:id="@+id/single_profile_is_hireable_qualifier"
                            android:text="@string/single_profile_is_hireable_qualifier_msg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:maxWidth="100dp" />

                        <TextView
                            android:id="@+id/single_profile_is_hireable"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="@string/default_not_specified"
                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                    </TableRow>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/single_profile_share_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="15dp"
                android:gravity="start|center_vertical"
                android:background="@drawable/btn_colored_background_round_edges"
                android:drawableRight="@drawable/ic_action_share"
                android:drawableEnd="@drawable/ic_action_share"
                style="?android:attr/buttonBarButtonStyle"
                android:text="@string/msg_share_profile"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/mediumWhite" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
