<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.folushooladipo.lasgiti.ProfilesActivity"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/profiles_activity_profiles_container"
        android:scrollbars="vertical"
        android:fadeScrollbars="true"/>

    <LinearLayout
        android:id="@+id/profiles_activity_loading_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/profiles_activity_loading_progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/profiles_activity_loading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loading_profiles_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/profiles_activity_loading_failed_container"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/profiles_activity_loading_failed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/profiles_activity_loading_failed_msg"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/profiles_activity_retry_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:background="@drawable/btn_colored_background_round_edges"
            android:drawableRight="@drawable/ic_action_refresh"
            android:drawableEnd="@drawable/ic_action_refresh"
            android:text="@string/default_retry_msg"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="#fdfdfd" />

    </LinearLayout>

</LinearLayout>
